name: macaw
version: 0.0.1
author: Galois, Inc.
maintainer: jhendrix@galois.com
build-type: Simple
cabal-version: >= 1.9.2

library
  build-depends:
    base >= 4,
--    aeson,
    ansi-wl-pprint,
    binary,
--    bv,
    bytestring,
    containers >= 0.5.8.1,
--    data-binary-ieee754,
--    dwarf-tools,
    elf-edit >= 0.28,
--    fingertree,
    flexdis86 >= 0.1.1,
    galois-dwarf,
    IntervalMap,
    lens >= 4.7,
--    llvm-pretty,
    mtl,
    parameterized-utils >= 0.1.6,
--    random,
    text,
--    transformers,
    vector,
    QuickCheck >= 2.7

  hs-source-dirs: src

  exposed-modules:
    Data.Macaw.AbsDomain.AbsState
    Data.Macaw.AbsDomain.Refine
    Data.Macaw.AbsDomain.StridedInterval
    Data.Macaw.Architecture.Info
    Data.Macaw.Architecture.Syscall
    Data.Macaw.CFG
    Data.Macaw.DebugLogging
    Data.Macaw.Discovery
    Data.Macaw.Discovery.Info
    Data.Macaw.Dwarf
    Data.Macaw.Memory
    Data.Macaw.Memory.ElfLoader
    Data.Macaw.Memory.Flexdis86
    Data.Macaw.Memory.Permissions
    Data.Macaw.Types

  ghc-options: -Wall -Werror
  ghc-options: -fno-warn-unticked-promoted-constructors
  ghc-prof-options: -O2 -fprof-auto-top