name: macaw
version: 0.0.1
author: Galois, Inc.
maintainer: jhendrix@galois.com
build-type: Simple
cabal-version: >= 1.9.2

library
  build-depends:
    base >= 4,
    ansi-wl-pprint,
    binary,
    bytestring,
    containers >= 0.5.8.1,
    elf-edit >= 0.28,
    galois-dwarf,
    IntervalMap >= 0.5,
    lens >= 4.7,
    mtl,
    parameterized-utils >= 0.1.6,
    text,
    vector,
    QuickCheck >= 2.7

  hs-source-dirs: src

  exposed-modules:
    Data.Macaw.AbsDomain.AbsState
    Data.Macaw.AbsDomain.JumpBounds
    Data.Macaw.AbsDomain.Refine
    Data.Macaw.AbsDomain.StridedInterval
    Data.Macaw.Architecture.Info
    Data.Macaw.Architecture.Syscall
    Data.Macaw.CFG
    Data.Macaw.DebugLogging
    Data.Macaw.Discovery
    Data.Macaw.Discovery.Info
    Data.Macaw.Dwarf
    Data.Macaw.Fold
    Data.Macaw.Memory
    Data.Macaw.Memory.ElfLoader
    Data.Macaw.Memory.Permissions
    Data.Macaw.Types

  ghc-options: -Wall -Werror
  ghc-options: -fno-warn-unticked-promoted-constructors
  ghc-prof-options: -O2 -fprof-auto-top