name: macaw-base
version: 0.0.2
author: Galois, Inc.
maintainer: jhendrix@galois.com
build-type: Simple
cabal-version: >= 1.9.2
license:       BSD3
license-file:  LICENSE

library
  build-depends:
    base >= 4,
    ansi-wl-pprint,
    binary,
    bytestring,
    containers >= 0.5.8.1,
    elf-edit >= 0.28,
    galois-dwarf,
    IntervalMap >= 0.5,
    lens >= 4.7,
    mtl,
    parameterized-utils >= 0.1.6,
    text,
    vector,
    QuickCheck >= 2.7

  hs-source-dirs: src

  exposed-modules:
    Data.Macaw.AbsDomain.AbsState
    Data.Macaw.AbsDomain.JumpBounds
    Data.Macaw.AbsDomain.Refine
    Data.Macaw.AbsDomain.StridedInterval
    Data.Macaw.Analysis.FunctionArgs
    Data.Macaw.Architecture.Info
    Data.Macaw.CFG
    Data.Macaw.CFG.App
    Data.Macaw.CFG.Block
    Data.Macaw.CFG.BlockLabel
    Data.Macaw.CFG.Core
    Data.Macaw.CFG.DemandSet
    Data.Macaw.CFG.Rewriter
    Data.Macaw.DebugLogging
    Data.Macaw.Discovery
    Data.Macaw.Discovery.AbsEval
    Data.Macaw.Discovery.State
    Data.Macaw.Dwarf
    Data.Macaw.Fold
    Data.Macaw.Memory
    Data.Macaw.Memory.ElfLoader
    Data.Macaw.Memory.Permissions
    Data.Macaw.Types

  ghc-options: -Wall
  ghc-options: -fno-warn-unticked-promoted-constructors
  ghc-prof-options: -O2 -fprof-auto-top