name:                macaw-aarch32
version:             0.1.0.0
synopsis:            Support for 32 bit ARM in macaw
description:         This library implements 32 bit ARM support (both the ARM and Thumb encodings) for the macaw library. The semantics are derived from the official ARM semantics (encoded in ASL).
license:             BSD3
license-file:        LICENSE
author:              Kevin Quick
maintainer:          kquick@galois.com
-- copyright:           
category:            Semantics
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Data.Macaw.ARM
                     , Data.Macaw.ARM.Arch
                     , Data.Macaw.ARM.ARMReg
                     , Data.Macaw.ARM.BinaryFormat.ELF
                     , Data.Macaw.ARM.Disassemble
                     , Data.Macaw.ARM.Eval
                     , Data.Macaw.ARM.Identify
                     , Data.Macaw.ARM.Semantics.ARMSemantics
                     , Data.Macaw.ARM.Semantics.ThumbSemantics
                     , Data.Macaw.ARM.Semantics.TH
                     , Data.Macaw.ARM.Simplify
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.10 && <5
                     , ansi-wl-pprint
                     , asl-translator
                     , bytestring
                     , bv-sized >= 1.0.1 && < 1.1
                     , cereal
                     , containers
                     , crucible
                     , dismantle-arm-xml
                     , dismantle-tablegen
                     , elf-edit
                     , lens
                     , macaw-base
                     , macaw-semmc
                     , mtl
                     , parameterized-utils
                     , pretty
                     , semmc
                     , semmc-aarch32
                     , template-haskell
                     , text
                     , vector
                     , what4
  -- build-tools:         arm-none-eabi-gcc
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -Wcompat

test-suite macaw-asl-tests
  type: exitcode-stdio-1.0
  default-language:    Haskell2010
  ghc-options:         -Wall -Wcompat
  hs-source-dirs:      tests
  main-is:             TestMain.hs
  other-modules:       ARMTests
                     , MismatchTests
                     , Shared
  build-depends:       base >=4.10 && <5
                     , ansi-wl-pprint
                     , binary
                     , bytestring
                     , containers
                     , elf-edit
                     , exceptions
                     , filemanip
                     , filepath
                     , lens
                     , macaw-base
                     , macaw-aarch32
                     , parameterized-utils
                     , semmc-aarch32
                     , tasty
                     , tasty-hunit
