name:                macaw-arm
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Kevin Quick
maintainer:          kquick@galois.com
-- copyright:           
category:            Semantics
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  -- exposed-modules:     
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.10 && <4.11
  build-tools:         arm-none-eabi-gcc
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite macaw-arm-tests
  type: exitcode-stdio-1.0
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      tests
  main-is:             TestMain.hs
  other-modules:       ARMTests
                     , MismatchTests
                     , Shared
  build-depends:       base >=4.10 && <4.11
                     , binary
                     , bytestring
                     , containers
                     , elf-edit
                     , exceptions
                     , filemanip
                     , filepath
                     , lens
                     , macaw-base
                     , macaw-arm
                     , parameterized-utils
                     , tasty
                     , tasty-hunit
