name: macaw-symbolic
version: 0.0.1
author: Galois, Inc.
maintainer: jhendrix@galois.com
build-type: Simple
cabal-version: >= 1.9.2

library
  build-depends:
    base >= 4,
    containers,
    crucible,
    macaw,
    mtl,
    parameterized-utils

  hs-source-dirs: src

  exposed-modules:
    Data.Macaw.Symbolic.App
    Data.Macaw.Symbolic

  ghc-options: -Wall -Werror
  ghc-prof-options: -O2 -fprof-auto-top